--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply bg-black text-white px-4 py-2 items-center rounded-lg tracking-tight font-medium inline-flex justify-center;
+  }
+  .btn-primary {
+    @apply bg-black text-white;
+  }
+  .btn-ghost {
+    @apply bg-transparent text-black;
+  }
+}
