--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,14 @@
   .tag {
     @apply text-sm inline-flex rounded-lg border border-[#222]/10 py-1 px-3 tracking-tight;
   }
+  .section-title {
+    @apply bg-gradient-to-b from-black to-[#001E80] text-center tracking-tighter text-transparent bg-clip-text text-3xl md:text-[54px] md:leading-[60px] font-bold;
+  }
+  .section-desc {
+    @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E];
+  }
+
+  .section-heading {
+    @apply max-w-[540px] mx-auto;
+  }
 }
